--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: '3.8'
 services:
   gateway:
-    build: /gateway
-    image: shareit_gateway_image
-    container_name: shareit_gateway_container
+    build: gateway
+    image: gateway_image
+    container_name: gateway_container
     ports:
       - "8080:8080"
     depends_on:
@@ -12,9 +12,9 @@ services:
       - SHAREIT_SERVER_URL=http://server:9090
 
   server:
-    build: /server
-    image: shareit_server_image
-    container_name: shareit_server_container
+    build: server
+    image: server_image
+    container_name: server_container
     ports:
       - "9090:9090"
     depends_on:
